Final Update Sprint 3